tests/macros/int/page_size.stderr
error: option `page_size` does not exist for kind `int`
 --> $DIR/page_size.rs:2:35
  |
2 |     inquisition::questions![int { page_size: todo!() }];
  |                                   ^^^^^^^^^
