tests/macros/int/page_size.rs
fn main() {
    inquisition::questions![int { page_size: todo!() }];
}
